argocd/infra/monitoring/uptime-kuma/manifests/mariadb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mariadb
  name: mariadb
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: mariadb
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      securityContext:
        fsGroup: 3000
        runAsUser: 3000
        runAsGroup: 3000
      containers:
        - image: harbor.yanello.net/docker/library/mariadb:13.0.2@sha256:f1bba652ba57bea3099ca2fe1af692af537c27d96e0bcde39dce29e2ba1ec4f3
          imagePullPolicy: IfNotPresent
          name: db
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mariadb
          resources:
            limits:
              memory: 1Gi
            requests:
              memory: 500Mi
              cpu: 10m
      restartPolicy: Always
      volumes:
        - name: mariadb
          persistentVolumeClaim:
            claimName: mariadb
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mariadb
  name: mariadb
spec:
  ports:
    - name: mariadb
      port: 3306
      targetPort: 3306
  selector:
    app: mariadb
