argocd/infra/monitoring/uptime-kuma/manifests/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma-httproute
  labels:
    app.kubernetes.io/instance: uptime-kuma
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - kuma.yanello.net
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: uptime-kuma
          port: 3001
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
